# printingpress

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  code-quality.yml
docs/: api.rst  conf.py  examples.rst  index.rst
docs/_static/css/: dark.css
docs/examples/: basic.py
src/printingpress/: __init__.py
